--- a/lang/de.json
+++ b/lang/de.json
@@ -54,6 +54,7 @@
   "slide_title_4": "Du musst nicht mehr über die Küche nachdenken!",
   "slide_content_4": "EcoGourmet präsentiert gesunde Menüs, um deine Essensentscheidungen zu erleichtern. Wähle einfach aus bis zu 3 täglichen Menüs!",
   "services":"Rezepte",
+  "products": "Geschäft",
   "shop_card_1":"Ecogourmet bietet eine breite Palette nachhaltiger und umweltfreundlicher Lebensmittelprodukte. Jedes unserer Produkte wird in umweltfreundlicher Verpackung geliefert und trägt dazu bei, einen nachhaltigen Lebensstil zu unterstützen.",
   "shop_card_2":"Ecogourmet verpflichtet sich zur Kundenzufriedenheit und bietet schnelle, zuverlässige Lieferdienste. Wir liefern Ihre Bestellungen schnell und präzise aus, damit unsere Kunden die frischen und hochwertigen Produkte so schnell wie möglich genießen können.",
   "shop_card_3":"Ecogourmet bietet regelmäßig exklusive Aktionen und Rabatte für unsere Kunden an. Diese laufenden Sonderangebote sollen den Einkauf noch ansprechender gestalten und die Entscheidung für Ecogourmet vorteilhafter machen.",
@@ -172,10 +173,34 @@
   "recipe_tit_1": "Das heutige Rezept für euch",
   "crois_mai": "Croissant-Käsesandwich",
   "crois_elk": "Das folgende Rezept ist ein raffiniertes Croissant-Käsesandwich, das köstlich und sättigend ist. Die Zutaten und Zubereitungsschritte finden Sie unten.",
-  "crois_hozz": "Zutaten:\n- 4 Croissants, horizontal geschnitten\n- 4 große Eier\n- 40 ml Milch\n- 4 Scheiben dünn geschnittener Schinken\n- 120 g Cervinus Delicato Käse\n- Salz, Pfeffer nach Geschmack\n- 1 kleiner Teelöffel ungesalzene Butter\n- 2 kleine Teelöffel Dijon-Senf",
-  "crois_mod": "Anleitung:\n1. Schlagen Sie die Eier in einer Schüssel, mischen Sie sie dann mit Milch, Salz und Pfeffer.\n2. Schmelzen Sie die Butter in einer Pfanne, gießen Sie die Eimischung ein und kochen Sie sie sanft, dabei ständig rühren.\n3. Bestreichen Sie die Croissants mit Senf, legen Sie Schinken, Rührei und Käse darauf.\n4. Backen Sie bei 175 ° C, bis der Käse schmilzt.\n5. Köstliches, schnelles Frühstück oder leichtes Abendessen fertig!",
+  "crois_hozz": "Zutaten:- 4 Croissants, horizontal geschnitten- 4 große Eier- 40 ml Milch- 4 Scheiben dünn geschnittener Schinken- 120 g Cervinus Delicato Käse- Salz, Pfeffer nach Geschmack- 1 kleiner Teelöffel ungesalzene Butter- 2 kleine Teelöffel Dijon-Senf",
+  "crois_mod": "Anleitung:1. Schlagen Sie die Eier in einer Schüssel, mischen Sie sie dann mit Milch, Salz und Pfeffer.2. Schmelzen Sie die Butter in einer Pfanne, gießen Sie die Eimischung ein und kochen Sie sie sanft, dabei ständig rühren.3. Bestreichen Sie die Croissants mit Senf, legen Sie Schinken, Rührei und Käse darauf.4. Backen Sie bei 175 ° C, bis der Käse schmilzt.5. Köstliches, schnelles Frühstück oder leichtes Abendessen fertig!",
   "services_title": "Warum unsere Rezepte wählen?",
-  "services_text": "Unsere Rezepte bieten die feinsten Aromen, bei denen die Harmonie der Zutaten und die meisterhafte Mischung von Gewürzen den Begriff des Geschmackserlebnisses auf eine neue Ebene heben."
-  
+  "services_text": "Unsere Rezepte bieten die feinsten Aromen, bei denen die Harmonie der Zutaten und die meisterhafte Mischung von Gewürzen den Begriff des Geschmackserlebnisses auf eine neue Ebene heben.",
+  "contact": "Kontakt",
+  "keress_m" :"Kontaktieren Sie uns vertrauensvoll zu den folgenden Zeiten.",
+  "day_1": "Montag-Freitag:",
+  "day_2": "Samstag:",
+  "day_3": "Sonntag:",
+  "C_Sz": "Der Firmensitz unseres Unternehmens",
+  "w_t_c" : "Kontaktinformationen",
+  "zárva" : "Geschlossen",
+  "faq_q2": "Wie unterstützt EcoGourmet die Nachhaltigkeit in seinen Rezepten und Produkten?",
+  "faq_a2": "Die EcoGourmet-Website bietet Rezepte, die leicht aus nachhaltigen Zutaten bezogen werden können, und die in unserem Webshop verkauften Kochbücher erläutern die Praktiken des nachhaltigen Einkaufs und Kochens.",
+  "faq_q3": "Wie erhalte ich personalisierte Rezepte von EcoGourmet?",
+  "faq_a3": "Über die EcoGourmet-Website können Sie personalisierte Rezepte bestellen, die auf Ihre Ernährungspräferenzen und Lebensmittelunverträglichkeiten zugeschnitten sind. Wählen Sie einfach Ihre Bedürfnisse aus, und wir liefern Ihnen die einzigartigen Rezepte.",
+  "faq_q4": "Gibt es auch vegane und vegetarische Rezepte auf EcoGourmet?",
+  "faq_a4": "Ja, EcoGourmet bietet eine Vielzahl von veganen und vegetarischen Rezepten. Entdecke die Auswahl an gesunden und nachhaltigen Gerichten auf unserer Website!",
+  "faq_q5": "Welche Art von umweltfreundlicher Verpackung verwendet EcoGourmet in seinem Webshop?",
+  "faq_a5": "Der EcoGourmet-Webshop bietet nachhaltige Verpackungsoptionen wie recycelbare, kompostierbare oder aus recycelten Materialien hergestellte Verpackungen.",
+  "faq_q6": "Wie stellt EcoGourmet sicher, dass die Rezepte auf der Website einfach zu befolgen sind?",
+  "faq_a6": "Die EcoGourmet-Website bietet leicht verständliche, schrittweise geführte Rezepte mit Videos und ausführlichen Anweisungen, um es selbst für Hobbyköche einfach zu machen, köstliche Mahlzeiten zuzubereiten.",
+  "gy_i_k" : "Häufig gestellte Fragen",
+  "awards": "Auszeichnungen",
+  "awards_text": "Wir verdanken es euch!",
+  "perc1": "Minute",
+  "nxt_str": "Weiter zum Geschäft",
+  "nxt_rcp" : "Weiter zu den Rezepten"
+
 
 }
