--- a/lang/hu.json
+++ b/lang/hu.json
@@ -154,8 +154,7 @@
   "recipe_leiras_8" : "Padlizsán szeletek parmezán és paradicsom szósszal.",
   "recipe_nev_9" : "Marhapörkölt nokedlivel",
   "recipe_leiras_9" : "Hagyományos marhapörkölt nokedlivel.",
-  "recipe_elkeszites_1": "1. Üss fel 2 tojást egy tálba.\n2. Verd fel a tojásokat.\n3. Sózd és borsozd meg ízlés szerint.\n4. Süsd meg a tojásokat egy serpenyőben.",
-
+  "recipe_elkeszites_1": "1. Üss fel 2 tojást egy tálba.2. Verd fel a tojásokat.3. Sózd és borsozd meg ízlés szerint.4. Süsd meg a tojásokat egy serpenyőben.",
   "recipe_elkeszites_2" : "1. Főzd meg a zabpelyhet vízben. 2. Adjon hozzá friss gyümölcsöket. 3. Keverje össze és tálalja.",
   "recipe_elkeszites_3" : "1. Tegyen görög joghurtot egy tálba. 2. Adjon hozzá választott gyümölcsöket. 3. Keverje össze és élvezze.",
   "recipe_elkeszites_4" : "1. Fűszerezze meg a csirkemellet. 2. Süssük meg a csirkemellet serpenyőben. 3. Készítse el a friss zöldségeket.",
@@ -176,9 +175,34 @@
   "recipe_tit_1": "Mai recept nektek",
   "crois_mai": "Croissant Sajtos Szendvics",
   "crois_elk": "A következő recept egy összetett croissant sajtos szendvics, amely ízletes és laktató. A hozzávalókat és az elkészítés lépéseit lentebb találod.",
-  "crois_hozz": "Hozzávalók:\n- 4 croissant, vízszintesen felezve\n- 4 nagy tojás\n- 40 ml tej\n- 4 szelet vékonyra szeletelt sonka\n- 120 g Cervinus Delicato sajt\n- só, bors ízlés szerint\n- 1 mokkáskanál sózatlan vaj\n- 2 pici teáskanál dijoni mustár",
-  "crois_mod": "Elkészítés:\n1. Verjük fel a tojásokat tálban, majd keverjük össze a tejjel, sóval és borssal.\n2. Olvasszuk fel a vajat serpenyőben, öntsük bele a tojáskeveréket, és süssük lágyan kevergetve.\n3. Kenjük meg a croissantokat mustárral, helyezzünk rájuk sonkát, rántottát és sajtot.\n4. Süssük 175 ° C-on, amíg a sajt megolvad.\n5. Ízletes, gyors reggeli vagy könnyű vacsora elkészítve!",
+  "crois_hozz": "Hozzávalók:- 4 croissant, vízszintesen felezve- 4 nagy tojás- 40 ml tej- 4 szelet vékonyra szeletelt sonka- 120 g Cervinus Delicato sajt- só, bors ízlés szerint- 1 mokkáskanál sózatlan vaj- 2 pici teáskanál dijoni mustár",
+  "crois_mod": "Elkészítés:1. Verjük fel a tojásokat tálban, majd keverjük össze a tejjel, sóval és borssal.2. Olvasszuk fel a vajat serpenyőben, öntsük bele a tojáskeveréket, és süssük lágyan kevergetve.3. Kenjük meg a croissantokat mustárral, helyezzünk rájuk sonkát, rántottát és sajtot.4. Süssük 175 ° C-on, amíg a sajt megolvad.5. Ízletes, gyors reggeli vagy könnyű vacsora elkészítve!",
   "services_title": "Miért válassza receptjeinket?",
-  "services_text": "Receptjeink a legfinomabb ízeket kínálják, ahol az alapanyagok harmóniája és a fűszerek mesteri keveréke új szintre emeli az ízorgia fogalmát."
+  "services_text": "Receptjeink a legfinomabb ízeket kínálják, ahol az alapanyagok harmóniája és a fűszerek mesteri keveréke új szintre emeli az ízorgia fogalmát.",
+  "contact": "Kapcsolat",
+  "keress_m": "Keress minket bizalommal a következő időpontokban.",
+  "day_1": "Hétfőtől-Péntekig:",
+  "day_2": "Szombat:",
+  "day_3": "Vasárnap:",
+  "C_Sz": "Cégünk székhelye",
+  "w_t_c" : "Elérhetőségeink",
+  "zárva" : "Zárva",
+  "faq_q2": "Milyen módon támogatja az EcoGourmet a fenntarthatóságot a receptek és termékei során?",
+  "faq_a2": "Az EcoGourmet weboldal olyan recepteket kínál, amelyekhez könnyen hozzájuthatsz fenntartható forrásokból, és a webshopban értékesített receptkönyvek részletezik a fenntartható vásárlás és főzés gyakorlatát.",
+  "faq_q3": "Hogyan szerezhetek egyedi recepteket az EcoGourmet-tól?",
+  "faq_a3": "Az EcoGourmet weboldalon keresztül egyedi recepteket rendelhetsz a saját étkezési preferenciáidhoz és ételintoleranciáidhoz igazítva. Egyszerűen válaszd ki az igényeidet, és mi szállítjuk az egyedi recepteket.",
+  "faq_q4": "Vannak vegán és vegetáriánus recepteket is az EcoGourmeton?",
+  "faq_a4": "Igen, az EcoGourmet kínálatában számos vegán és vegetáriánus recept is megtalálható. Fedezd fel az egészséges és fenntartható ételek széles választékát az oldalunkon!",
+  "faq_q5": "Milyen környezetbarát csomagolást használ az EcoGourmet a webshopjában?",
+  "faq_a5": "Az EcoGourmet webshopja fenntartható csomagolási lehetőségeket kínál, például újrahasznosítható, komposztálható vagy újrahasznosított anyagokból készült csomagolásokat.",
+  "faq_q6": "Hogyan biztosítja az EcoGourmet, hogy a receptek egyszerűen követhetők legyenek a weboldalon?",
+  "faq_a6": "Az EcoGourmet weboldalán könnyen követhető lépésről lépésre vezetett receptek találhatók, videókkal és részletes leírásokkal, hogy még az otthoni szakácsok is könnyen elkészíthessék a finom ételeket.",
+  "gy_i_k" : "Gyakran Ismételt Kérdések",
+  "awards": "Elismerések",
+  "awards_text": "Nektek köszönhetjük!",
+  "perc1" : "Perc",
+  "nxt_str": "Tovább az Áruházra",
+  "nxt_rcp" : "Tovább a Receptekre"
+
 
 }
