--- a/lang/hu.json
+++ b/lang/hu.json
@@ -202,7 +202,8 @@
   "awards_text": "Nektek köszönhetjük!",
   "perc1" : "Perc",
   "nxt_str": "Tovább az Áruházra",
-  "nxt_rcp" : "Tovább a Receptekre"
+  "nxt_rcp" : "Tovább a Receptekre",
+  "click" : "Kattintson ide"
 
 
 }
