--- a/lang/hu.json
+++ b/lang/hu.json
@@ -108,7 +108,7 @@
   "platforms_1":"Bizonyára az Ön számára is kényelmes az elérhetőség különböző platformokon",
   "prod_nev_1" : "Szakácskönyv Kétbalkezes",
   "prod_leiras_1" : "Kétbalkezesek is könnyedén elkészíthetik a finom húsételeket ebben a szakácskönyvben található egyszerű és hatékony receptekkel.",
-  "prod_kategoria_1" : "Hus ételek",
+  "prod_kategoria_1" : "Hús ételek",
   "prod_nev_2" : "A nagy Wok szakácskönyv",
   "prod_leiras_2" : "Fedezd fel a wok kulináris világát ebben a szakácskönyvben, amely izgalmas és ízletes húsételeket kínál.",
   "prod_nev_3" : "Éhesek Vagyunk",
